// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> button  Disabled button Should render basic button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#54575a",
      "borderRadius": 8,
      "opacity": 1,
      "padding": 16,
      "width": "90%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "display": "flex",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Test button
  </Text>
</View>
`;

exports[`components >> button  Enabled button Should render basic button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#0FCFA6",
      "borderRadius": 8,
      "opacity": 1,
      "padding": 16,
      "width": "90%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "display": "flex",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Test button
  </Text>
</View>
`;

exports[`components >> button  Loading button Should render button in loading state 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#0FCFA6",
      "borderRadius": 8,
      "opacity": 1,
      "padding": 16,
      "width": "90%",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Array [
        Object {
          "color": "#252424",
        },
      ]
    }
    testID="QBYQCQ-button-spinner"
  />
</View>
`;
